Fix compilation for EP checks